--- a/static/res/minivox-green.css
+++ b/static/res/minivox-green.css
@@ -6,7 +6,7 @@
     /* color for table header */
     /* color for table rows (even) */
 
-    --color2: #000000;
+    --color2: #ACB59D;
     /* primary text color */
     /* color for table text */
 
